@@ -32,6 +32,12 @@ Core and Builtins
 Library
 -------
 
+- Issue #18950: Fix miscellaneous bugs in the sunau module.
+  Au_read.readframes() now updates current file position and reads correct
+  number of frames from multichannel stream.  Au_write.writeframesraw() now
+  correctly updates current file position.  Au_read and Au_write now correctly
+  work with file object if start file position is not a zero.
+
 - Issue #18050: Fixed an incompatibility of the re module with Python 2.7.3
   and older binaries.
 
